# deck-of-cards

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  explanation.txt
include/: deck.h  playing_card.h  war_card_game.h
src/: playing_card.cpp  war_card_game.cpp
test/: knuth_shuffle_test.cpp  shuffle_deal_test.cpp  war_card_game_test.cpp
